--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -23,10 +23,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize EDF ROS Interface"
+    "# Initialize Robot Interface"
    ]
   },
   {
@@ -36,7 +37,7 @@
    "outputs": [],
    "source": [
     "env_interface = EdfRosInterface(reference_frame = \"scene\", planner_id=\"AnytimePathShortening\")\n",
-    "env_interface.set_planning_time(seconds=1.)\n",
+    "env_interface.set_planning_time(seconds=5.)\n",
     "env_interface.reset()"
    ]
   },
@@ -57,10 +58,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Observe Point clouds"
+    "# Pick"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observe"
    ]
   },
   {
@@ -76,21 +86,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pick"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pick_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275])\n",
-    "# pre_pick_poses = SE3.multiply(pick_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))\n",
-    "# post_pick_poses = SE3.multiply(SE3([1., 0., 0., 0., 0., 0., 0.2]), pick_poses)"
+    "### Sample Pick Pose"
    ]
   },
   {
@@ -100,6 +100,8 @@
    "outputs": [],
    "source": [
     "pick_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275])\n",
+    "# pre_pick_poses = SE3.multiply(pick_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))\n",
+    "# post_pick_poses = SE3.multiply(SE3([1., 0., 0., 0., 0., 0., 0.2]), pick_poses)\n",
     "_, pre_pick_poses = optimize_pcd_collision(x=scene_raw, y=grasp_raw, \n",
     "                                           cutoff_r = 0.03, dt=0.01, eps=1., iters=50,\n",
     "                                           rel_pose=pick_poses)\n",
@@ -107,18 +109,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "idx = 0\n",
-    "pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]\n",
-    "\n",
-    "colcheck_r = 0.003 # Should be similar to voxel filter size\n",
-    "col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(pick_pose)[0], r = colcheck_r)\n",
-    "print(f\"Collision-free Pick Pose: {not col_check}\")\n",
-    "assert not col_check, \"No collision-free pick pose found!\""
+    "### Execute Pick"
    ]
   },
   {
@@ -127,7 +122,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# draw_geometry([scene_raw] + grasp_raw.transformed(pre_pick_pose))"
+    "for idx in [0]:\n",
+    "    pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]\n",
+    "    \n",
+    "    colcheck_r = 0.003 # Should be similar to voxel filter size\n",
+    "    col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(pick_pose)[0], r = colcheck_r)\n",
+    "    print(f\"Pick Pose_{idx} collision-free: {not col_check}\")\n",
+    "    if not col_check:\n",
+    "        break\n",
+    "    \n",
+    "if not col_check:\n",
+    "    print(\"Found collision-free pick pose!\")\n",
+    "else:\n",
+    "    raise NotImplementedError(\"No collision-free pick pose found!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DEBUG\n",
+    "# draw_geometry([scene_raw] + grasp_raw.transformed(post_pick_pose))"
    ]
   },
   {
@@ -137,34 +154,21 @@
    "outputs": [],
    "source": [
     "pick_result = env_interface.pick(pre_pick_pose, pick_pose, post_pick_pose)\n",
-    "print(pick_result)"
+    "print(f\"Pick result: {pick_result}\")\n",
+    "if pick_result == \"SUCCESS\":\n",
+    "    pick_demo = TargetPoseDemo(target_poses=pick_poses, scene_pc=scene_raw, grasp_pc=grasp_raw)\n",
+    "    env_interface.detach()\n",
+    "    env_interface.attach_placeholder() # To avoid collsion with the grasped object\n",
+    "else:\n",
+    "    raise NotImplementedError(\"Pick failed\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert pick_result == 'SUCCESS'\n",
-    "pick_demo = TargetPoseDemo(target_poses=pick_poses, scene_pc=scene_raw, grasp_pc=grasp_raw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env_interface.detach()\n",
-    "env_interface.attach_placeholder() # To avoid collsion with the grasped object"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Observe gripper"
+    "# Observe for Place"
    ]
   },
   {
@@ -173,78 +177,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Home position\n",
-    "result = env_interface.move_simple(target_poses = SE3([0., 0., 1., 0., -0.1, 0., 0.6]))\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# result = env_interface.move_simple(target_poses = SE3([[0., 0., 1., 0., -0.1, 0., 0.6], \n",
-    "#                                                        [0.5, -0.5, -0.5, -0.5, 0.0, 0., 0.5], \n",
-    "#                                                        [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.5]]), \n",
-    "#                                   )\n",
-    "# print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Observe EEF\n",
+    "result = env_interface.move_to_named_target(\"init\")\n",
+    "print(f\"Move to End-Effector observation pose: {result}\")\n",
     "if result == 'SUCCESS':\n",
     "    env_interface.detach()\n",
     "    grasp_raw = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
-    "    env_interface.attach(obj = grasp_raw)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Observe Scene"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = env_interface.move_simple(target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.4, 0.4, 0.6]))\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    env_interface.attach(obj = grasp_raw)\n",
+    "else:\n",
+    "    raise NotImplementedError(f\"Failed to move to End-Effector observation pose.\")\n",
+    "\n",
+    "# Observe Scene\n",
+    "result = env_interface.move_to_named_target(\"observe\")\n",
+    "print(f\"Move to Scene observation pose: {result}\")\n",
     "if result == 'SUCCESS':\n",
-    "    scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
+    "    scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)\n",
+    "else:\n",
+    "    raise NotImplementedError(f\"Failed to move to Scene observation pose.\")\n",
+    "\n",
+    "\n",
+    "result = env_interface.move_to_named_target(\"init\")\n",
+    "print(f\"Come back to default pose: {result}\")\n",
+    "if result == 'SUCCESS':\n",
+    "    pass\n",
+    "else:\n",
+    "    raise NotImplementedError(f\"Failed to come back to default pose.\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = env_interface.move_simple(target_poses = SE3([0., 0., 1., 0., -0.1, 0., 0.6]))\n",
-    "print(result)"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Place"
+    "# Place"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sample Place Poses"
    ]
   },
   {
@@ -261,18 +234,32 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Execute Place"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 0\n",
-    "place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
-    "\n",
-    "colcheck_r = 0.0015 # Should be similar to voxel filter size\n",
-    "col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(place_pose)[0], r = colcheck_r)\n",
-    "print(f\"Collision-free Place Pose: {not col_check}\")\n",
-    "assert not col_check, \"No collision-free place pose found!\""
+    "for idx in [0]:\n",
+    "    place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
+    "    \n",
+    "    colcheck_r = 0.0015 # Should be similar to voxel filter size\n",
+    "    col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(place_pose)[0], r = colcheck_r)\n",
+    "    print(f\"Place Pose_{idx} collision-free: {not col_check}\")\n",
+    "    if not col_check:\n",
+    "        break\n",
+    "    \n",
+    "if not col_check:\n",
+    "    print(\"Found collision-free place pose!\")\n",
+    "else:\n",
+    "    raise NotImplementedError(\"No collision-free place pose found!\")"
    ]
   },
   {
@@ -291,21 +278,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = env_interface.place(pre_place_pose, place_pose, post_place_pose)\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert result == 'SUCCESS'\n",
-    "env_interface.detach()\n",
-    "env_interface.release()\n",
-    "\n",
-    "place_demo = TargetPoseDemo(target_poses=place_poses, scene_pc=scene_raw, grasp_pc=grasp_raw)"
+    "place_result = env_interface.place(pre_place_pose, place_pose, post_place_pose)\n",
+    "print(f\"Place result: {place_result}\")\n",
+    "if place_result == \"SUCCESS\":\n",
+    "    place_demo = TargetPoseDemo(target_poses=place_poses, scene_pc=scene_raw, grasp_pc=grasp_raw)\n",
+    "    env_interface.detach()\n",
+    "    env_interface.release()\n",
+    "else:\n",
+    "    raise NotImplementedError(\"Place failed\")"
    ]
   },
   {
@@ -343,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
